<resources>
    <string name="app_name">BunkaList</string>
    <string name="login_email">Email</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_confirm_password">Confirm Password</string>
    <string name="login_sign_in">Sign In</string>
    <string name="login_sign_up">Create your account</string>
    <string name="login_reset_password">Reset my password</string>
    <string name="login_sign_in_google">Sign In with Google</string>
    <string name="login_forgot_password">I have forgotten my password</string>
    <string name="login_create_account">Create a new account</string>
    <string name="go_to_login">Go back to Login</string>
    <string name="select_image_user">select image profile</string>
    <string name="email_reset_to_password">Email has been sent to reset your password</string>
    <string name="email_reset_to_password_failed">Please make sure the email address is correct</string>
    <string name="user_confirm_email">User must confirm email first</string>
    <string name="login_error">An unexpected error occurred, please try again</string>
    <string name="confirm_email_send">An email has been sent to you. Please confirm before sign in</string>
    <string name="signUp_data_incorrect">Please make sure all the data is correct</string>
    <string name="add_correct_username_and_image_profile">Your username and your image profile have been added
        correctly
    </string>
    <string name="welcome_new_user">Welcome new User</string>
    <string name="btn_go_toActivity">next</string>
    <string name="error_new_user">Please try again</string>
    <string name="accept_the_permissions">Accept the Permission</string>
    <string name="btn_nav_timeline">Timeline</string>
    <string name="btn_nav_top">Tops</string>
    <string name="btn_nav_search">Search</string>
    <string name="btn_nav_profile">Profile</string>
    <string name="btn_nav_settings">Settings</string>
    <string name="edit_profile">Edit your Profile</string>
    <string name="apply_changes">Apply the changes</string>
    <string name="mode_light_dark">Select Mode Day/Night</string>
    <string name="terms_of_use">Terms of uses and Privacy Policy</string>
    <string name="licence">Licence</string>
    <string name="about_the_app">About the App</string>
    <string name="changed_mode_light">Mode: Day</string>
    <string name="changed_mode_dark">Mode: Night</string>
    <string name="changed_mode_custom">Mode: Day/Night</string>
    <string name="sign_out">Sign Out</string>
    <string name="name_view_movie" translatable="false">List User Movie</string>
    <string name="btn_top_movie">Your Tops</string>
    <string name="btn_list_all_movies">Your Lists</string>
    <string name="name_view_series" translatable="false">List User Series</string>
    <string name="btn_top_series" translatable="false">Your Top Series</string>
    <string name="btn_list_all_series" translatable="false">Your List Series</string>
    <string name="name_view_anime" translatable="false">List User Anime</string>
    <string name="btn_top_anime" translatable="false">Your Top Anime</string>
    <string name="btn_list_all_anime" translatable="false">Your List Anime</string>
    <string name="name_view_manga" translatable="false">List User Manga</string>
    <string name="btn_top_manga" translatable="false">Your Top Manga</string>
    <string name="btn_list_all_manga" translatable="false">Your List Manga</string>
    <string name="fragment_profile">Recently added:</string>
    <string name="fragment_profile_follow_list">people that you follow</string>
    <string name="fragment_profile_followers_list">People who follow you</string>
    <string name="item_timeline_chapter">Episode:</string>
    <string name="item_timeline_season">Season:</string>
    <string name="timeline_message_is_spoiler">[ Is Spoiler, long click on the text if you do not mind the Spoiler ]
    </string>
    <string name="toolbar_title_home" translatable="false">Home</string>
    <string name="timeline_tab_layout" translatable="false">Global</string>
    <string name="timeline_tab_layout_personal" translatable="false">Follows</string>
    <string name="timeline_chat_hint_answer">Answer this comment</string>
    <string name="checkbox_is_spoiler">Is Spoiler</string>
    <string name="dialog_timeline">Comment your opinion</string>
    <string name="send_opinion">Send</string>
    <string name="dialog_cancel_timeline">Cancel</string>
    <string name="hint_name_oeuvre">Name of the movie, series, anime</string>
    <string name="hint_dialog_timeline_season">Season</string>
    <string name="hint_dialog_timeline_chapter">Episode</string>
    <string name="hint_edit_text_content_dialog_timeline">Comment your opinion of an episode</string>
    <string name="dialog_timeline_checkbox_only_followers">Only for your followers</string>
    <string name="fragment_search">Search Movies, Series, Anime and People</string>
    <string name="text_view_get_full_details_search_item">See all the details</string>
    <string name="search_item_details_original_title" translatable="false">Original Title :</string>
    <string name="search_item_details_director" translatable="false">Director :</string>
    <string name="search_item_details_status" translatable="false">Status :</string>
    <string name="btn_search_item_details_your_list">Add in your List</string>
    <string name="searchItemDetailsrating">Rating:</string>
    <string name="search_item_not_have_tittle" translatable="false">Not title</string>
    <string name="search_item_full_details_trailers">Trailers</string>
    <string name="search_item_details_summary_label">Summary</string>
    <string name="activity_full_details">Genres :</string>
    <string name="activity_full_details_date">Date Release :</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior
    </string>
    <string name="dialog_add_list_title">Add in your list</string>
    <string name="dialog_add_list_add_positive_button">Added in list</string>
    <string name="dialog_add_list_add_negative_button">Cancel</string>
    <string name="dialogAddList">Set Status:</string>
    <string name="dialog_add_list_what_type">What type ?</string>
    <string name="dialog_add_list_text_view_arguments">What note do you give as a Story?</string>
    <string name="dialog_add_list_text_view_character">What note do you give as a Characters?</string>
    <string name="dialog_add_list_text_view_band_sound">What note do you give as a Soundtrack?</string>
    <string name="dialog_add_list_text_view_effects">What note do you give as a Photography / Animation?</string>
    <string name="dialog_add_list_text_view_Enjoyment">What note do you give as a Enjoyment?</string>
    <string name="dialog_add_the_list_alert">Alert chooses the type of work that is correct so that everything is
        displayed correctly in your lists
    </string>
    <string-array name="status">
        <item>Complete</item>
        <item>Watching</item>
        <item>Waiting for out</item>
        <item>On pause</item>
        <item>Dropped</item>
    </string-array>
    <string-array name="rating">
        <item>Rating Story</item>
        <item>Rating Characters</item>
        <item>Rating Soundtrack</item>
        <item>Rating Photography</item>
        <item>Rating Enjoyment</item>
        <item>Rating Final</item>
    </string-array>
    <string-array name="order">
        <item>ascendant</item>
        <item>descend</item>
    </string-array>
    <string-array name="type">
        <item>Movie</item>
        <item>Series</item>
        <item>Anime</item>
    </string-array>
    <string name="profile_list_activity_tab_all">All</string>
    <string name="profile_list_activity_tab_movie">Movie</string>
    <string name="profile_list_activity_tab_serie">Series</string>
    <string name="profile_list_activity_tab_anime">Anime</string>
    <string name="dialog_review_title">Review Extensive</string>
    <string name="dialog_review_your_title">Title the your Review</string>
    <string name="dialog_review">Comment your opinion on a Oeuvre in details</string>
    <string name="dialog_review_positive_button">Post Review</string>
    <string name="fragment_review_item">Write by</string>
    <string name="fragment_review_content_spoiler">This review contains a spoiler, click if you are not worried about
        the spoiler
    </string>
    <string name="activity_other_user_profile">Follow</string>
    <string name="activity_login_db_notice">This product uses the TMDb API but is not endorsed or certified by TMDb.
    </string>
    <string name="activity_licence">This application uses open source components. You can find the source code and
        license information of these open source projects.
    </string>
    <string name="sign_up_terms_anduse">"I accept the Privacy Policy and consent to the proccesing of my personal
        information in accordance with it."
    </string>
    <string name="sign_up_accept_terms_and_use">"Please accept the terms and conditions of use, policy of Privacy
        to continue"
    </string>
    <string name="fragment_tops_review_button_top_movies_popular">Top Movies Popular</string>
    <string name="fragment_tops_review_button_top_series_popular">Top Series Popular</string>
    <string name="fragment_top_reviews_title_popular"><![CDATA[Top 100 Popular Movies & Series]]></string>
    <string name="fragment_tops_review_button_top_movies_rated">Top Movies Rated</string>
    <string name="fragment_tops_review_button_top_series_rated">Top Series Rated</string>
    <string name="fragment_top_reviews_title_rated"><![CDATA[Top 100 Rated Movies & Series]]></string>
    <string name="fragment_tops_review_button_top_movies_upcoming">Movies Upcoming</string>
    <string name="fragment_tops_review_button_top_series_upcoming">Series Upcoming</string>
    <string name="fragment_top_reviews_title_Upcoming"><![CDATA[Movies & Series Upcoming]]></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_list_activity_tab_popular">Top Popular</string>
    <string name="profile_list_activity_tab_rated">Top Rated</string>
    <string name="profile_list_activity_tab_upcoming">Top Upcoming</string>
    <string name="fragment_top_reviews_title_list">Tops Popular, Rated, Upcoming of Movies, Series and Anime</string>
    <string name="fragment_top_reviews_title">Tops Popular, Rated, Upcoming.</string>
    <string name="fragment_tops_review_button_top_movies_list">Tops Movies</string>
    <string name="fragment_tops_review_button_top_series_list">Tops Series and Anime</string>
    <string name="search_item_full_details_recommendations">Recommendations</string>
    <string name="title_toolbar_tops_Movies">Tops of Movies.</string>
    <string name="title_toolbar_tops_Series">Tops of Series.</string>
    <string name="title_toolbar_tops_Anime">Tops of Animes.</string>
    <string name="title_toolbar_tops_Series_Anime">Tops Series And Anime</string>
    <string name="search_item_full_details_cast">Casting / Characters</string>
    <string name="search_item_full_details_crew">Crew</string>
    <string name="birthday_date_activity_people">Birthday Date :</string>
    <string name="deathday_date_activity_people">Deathday Date :</string>
    <string name="place_birth_activity_people">Place of Birth :</string>
    <string name="cast_historial_people_activity">Interpretation :</string>
    <string name="crew_historial_people_activity">Director / Producer</string>
    <string name="item_cast_people_data">Episode Count :</string>
    <string name="item_cast_people_data_character">character\'s name :</string>
    <string name="item_crew_people_data_work">work departments :</string>
    <string name="dialog_add_list_text_view_general">What note do you give to the entire work?</string>
</resources>