<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent">


    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="55dp"
              android:layout_marginTop="40dp" app:layout_constraintTop_toTopOf="parent"
              android:id="@+id/textViewDialogAddStatus" android:text="@string/dialogAddList"
              android:textStyle="bold|italic" android:textSize="24sp"/>

    <Spinner android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="48dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/textViewDialogAddStatus"
             android:id="@+id/spinnerStatus" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/dialog_add_list_what_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewType" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="55dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textViewDialogAddStatus"
            android:textStyle="bold|italic" android:textSize="24sp"/>
    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/spinnerStatus"
            app:layout_constraintStart_toEndOf="@+id/textViewType" android:layout_marginStart="8dp"/>

    <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
              app:layout_constraintStart_toStartOf="parent"
              android:inputType="number"
              android:layout_marginStart="55dp" android:hint="@string/hint_dialog_timeline_season"
              android:background="@drawable/edittext_rounded" android:padding="2dp"
              android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textViewType"
              android:id="@+id/editTextDialogAddListSeason"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="29dp"
            android:inputType="number"
            android:id="@+id/editTextDialogAddListEpisode"
            app:layout_constraintStart_toEndOf="@+id/editTextDialogAddListSeason" android:layout_marginStart="24dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/spinner"
            android:hint="@string/hint_dialog_timeline_chapter" android:background="@drawable/edittext_rounded"
            android:padding="2dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewDialogRating" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:textSize="18sp" android:textStyle="bold|italic"
            android:text="@string/dialog_add_list_text_view_arguments" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextDialogAddListEpisode"
            app:layout_constraintHorizontal_bias="0.2"/>
    <RatingBar
            android:layout_width="378dp"
            android:layout_height="43dp"
            android:id="@+id/ratingBar" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewDialogRating" android:numStars="10"
    />

</android.support.constraint.ConstraintLayout>