<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:fillViewport="true"
        tools:context="Activities.Login.LoginActivity">

    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:src="@drawable/ic_splash_screen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        />

        <EditText
                android:id="@+id/editTextEmail"
                android:inputType="textEmailAddress"
                android:hint="@string/login_email"
                android:textSize="@dimen/login_text_size"
                android:textColor="@color/colorPrimaryText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_edit_text_height"
                android:background="@drawable/edittext_rounded"
                android:paddingLeft="@dimen/login_edit_text_space"
                android:paddingRight="@dimen/login_edit_text_space"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toTopOf="@+id/editTextPassword" app:layout_constraintHorizontal_bias="0.0"
                android:textColorHint="@color/colorPrimaryText"/>
        <EditText
                android:id="@+id/editTextPassword"
                android:inputType="textPassword"
                android:hint="@string/login_password"
                android:textSize="@dimen/login_text_size"
                android:textColor="@color/colorPrimaryText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_edit_text_height"
                android:background="@drawable/edittext_rounded"
                android:paddingLeft="@dimen/login_edit_text_space"
                android:paddingRight="@dimen/login_edit_text_space"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginBottom="36dp"
                app:layout_constraintBottom_toTopOf="@+id/buttonLogIn" android:textColorHint="@color/colorPrimaryText"/>

        <Button
                android:id="@+id/buttonLogIn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_button_height"
                android:text="@string/login_sign_in"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/login_text_xl_size"
                android:background="@drawable/button_rounded_transparent_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toTopOf="@+id/textViewForgotPassword"/>

        <TextView
                android:id="@+id/textViewForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_forgot_password"
                android:textColor="@color/colorPrimaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toTopOf="@+id/buttonLogInGoogle"/>
        <Button
                android:id="@+id/buttonLogInGoogle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_button_height"
                android:background="@drawable/button_ripple_google"
                android:text="@string/login_sign_in_google"
                android:textColor="@color/colorPrimaryText"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toTopOf="@+id/buttonCreateAccount"/>

        <Button
                android:id="@+id/buttonCreateAccount"
                android:layout_width="match_parent"
                android:background="@drawable/button_ripple"
                android:text="@string/login_create_account"
                android:textSize="@dimen/login_text_xl_size"
                android:textColor="@color/colorPrimaryText"
                android:layout_height="42dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginBottom="2dp"/>

    </android.support.constraint.ConstraintLayout>



</ScrollView>