<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:fillViewport="true"
        tools:context=".Activities.LoginActivities.SignUpActivity">

    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:focusableInTouchMode="true"
            android:layout_height="wrap_content">

        <ImageButton
                android:layout_width="145dp"
                android:layout_height="132dp"
                android:background="@drawable/bubble_select_image_user"
                android:src="@drawable/ic_add_a_photo"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toTopOf="@+id/editTextEmailSignUp"
                android:id="@+id/imageButton"/>

        <EditText
                android:id="@+id/editTextEmailSignUp"
                android:inputType="textEmailAddress"
                android:hint="@string/login_email"
                android:textSize="@dimen/login_text_size"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_edit_text_height"
                android:background="@drawable/edittext_rounded"
                android:paddingLeft="@dimen/login_edit_text_space"
                android:paddingRight="@dimen/login_edit_text_space"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp"
                app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toTopOf="@+id/editTextUserName"/>

        <EditText
                android:id="@+id/editTextUserName"
                android:inputType="textEmailAddress"
                android:hint="@string/login_username"
                android:textSize="@dimen/login_text_size"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_edit_text_height"
                android:background="@drawable/edittext_rounded"
                android:paddingLeft="@dimen/login_edit_text_space"
                android:paddingRight="@dimen/login_edit_text_space"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp"
                app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toTopOf="@+id/editTextPasswordSignUp"/>
        <EditText
                android:id="@+id/editTextPasswordSignUp"
                android:inputType="textPassword"
                android:hint="@string/login_password"
                android:textSize="@dimen/login_text_size"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_edit_text_height"
                android:background="@drawable/edittext_rounded"
                android:paddingLeft="@dimen/login_edit_text_space"
                android:paddingRight="@dimen/login_edit_text_space"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp"
                app:layout_constraintBottom_toTopOf="@+id/editTextConfirmPassword"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginBottom="32dp"/>

        <EditText
                android:id="@+id/editTextConfirmPassword"
                android:inputType="textPassword"
                android:hint="@string/login_confirm_password"
                android:textSize="@dimen/login_text_size"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_edit_text_height"
                android:background="@drawable/edittext_rounded"
                android:paddingLeft="@dimen/login_edit_text_space"
                android:paddingRight="@dimen/login_edit_text_space"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toTopOf="@+id/buttonSingUP"/>

        <Button
                android:id="@+id/buttonSingUP"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_button_xl_height"
                android:text="@string/login_sign_up"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/login_text_xl_size"
                android:background="@drawable/button_ripple_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toTopOf="@+id/buttonGoLogIn"/>

        <Button
                android:id="@+id/buttonGoLogIn"
                android:layout_width="match_parent"
                android:background="@drawable/button_ripple"
                android:text="@string/go_to_login"
                android:textColor="@color/colorPrimaryText"
                android:layout_height="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="1.0"/>

    </android.support.constraint.ConstraintLayout>



</ScrollView>