<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:background="@color/colorBackgroundPrimary"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">


    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:fontFamily="@font/overpass"
            android:ems="10"
            android:id="@+id/editTextTittleReview" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" android:hint="@string/dialog_review_your_title"
            android:background="@drawable/edittext_rounded" android:padding="5dp"
            android:textColorHint="@color/colorPrimaryText" android:textColor="@color/colorPrimaryText"/>


    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            android:padding="4dp"
            android:ems="15"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:counterMaxLength="1400"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextTittleReview"
            app:hintTextAppearance="@color/colorPrimaryText" android:id="@+id/textInputLayout">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:inputType="textMultiLine"
                android:maxLines="15"
                android:maxLength="1400"
                android:id="@+id/editTextContentReview"
                android:fontFamily="@font/overpass"
                android:background="@drawable/edittext_rounded"
                android:hint="@string/dialog_review" android:textColorHint="@color/colorPrimaryText"
                android:textAlignment="viewStart" android:textColor="@color/colorPrimaryText"/>

    </android.support.design.widget.TextInputLayout>
    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/overpass"
            android:id="@+id/checkBoxReviewContainsSpoiler" app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout" android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            android:text="@string/checkbox_is_spoiler"/>

</android.support.constraint.ConstraintLayout>